# golos.contracts

./: .dockerignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  UnitTestsExternalProject.txt  build.sh  headers.hpp.in
.buildkite/: pipeline.yml
.buildkite/steps/: .build-image.sh.swp  build-image.sh  deploy-test.sh  publish-image.sh  upload-image.sh
Docker/: Dockerfile  docker-compose.yml  start-testnet.sh
auth-proto/: CMakeLists.txt  README.md
auth-proto/deposit/: CMakeLists.txt  deposit.abi  deposit.cpp  deposit.hpp
auth-proto/media/: CMakeLists.txt  media.abi  media.cpp
common/: config.hpp  config.hpp.in  dispatcher.hpp  dispatchers.hpp  hash64.hpp  parameter.hpp  parameter_ops.hpp  parameter_ops_spec.hpp  tuple_helper.hpp  upsert.hpp  util.hpp
common/calclib/: atmsp.h  atmsp_storable.h  fixed_point.h  fixed_point_math.h  fixed_point_utils.h
contracts/geos.token/: CMakeLists.txt  geos.token.abi  geos.token.cpp  geos.token.hpp
contracts/geos.vesting/: CMakeLists.txt  config.hpp  geos.vesting.abi  geos.vesting.cpp  geos.vesting.hpp  objects.hpp
contracts/golos.vesting/: CMakeLists.txt  config.hpp  golos.vesting.abi  golos.vesting.cpp  golos.vesting.hpp  objects.hpp  test_vesting.sh
contracts/vesting-contract/: CMakeLists.txt  config.hpp  objects.hpp  vesting-contract.abi  vesting-contract.cpp  vesting-contract.hpp
docs/en-US/: golos.charge_contract.md  golos.ctrl_contract.md  golos.emit_contract.md  golos.memo_contract.md  golos.publication_contract.md  golos.referral_contract.md  golos.social_contract.md  golos.vesting_contract.md  rewards_definition.md
docs/ru-RU/: golos.charge_contract.md  golos.ctrl_contract.md  golos.emit_contract.md  golos.memo_contract.md  golos.publication_contract.md  golos.referral_contract.md  golos.social_contract.md  golos.vesting_contract.md
evaluations-of-messages/reward_calcs/: CMakeLists.txt  exttypes.h  reward_calcs.cpp
evaluations-of-messages/unittests/: reward_calcs_tests.cpp
genesis/: genesis-info.json.tmpl  genesis.json.tmpl
golos.charge/: CMakeLists.txt  README.md  golos.charge.abi  golos.charge.cpp  golos.charge.hpp  parameters.hpp  types.h
golos.config/: CMakeLists.txt  README.md  golos.config.abi
golos.config/abi/: golos.config.abi
golos.config/include/golos.config/: config.hpp  golos.config.hpp  parameters.hpp
golos.config/src/: golos.config.cpp
golos.ctrl/: CMakeLists.txt  README.md  golos.ctrl.abi
golos.ctrl/abi/: golos.ctrl.abi
golos.ctrl/include/golos.ctrl/: config.hpp  golos.ctrl.hpp  parameters.hpp
golos.ctrl/src/: golos.ctrl.cpp
golos.emit/: CMakeLists.txt  README.md  golos.emit.abi
golos.emit/abi/: golos.emit.abi
golos.emit/include/golos.emit/: config.hpp  golos.emit.hpp  parameters.hpp
golos.emit/src/: golos.emit.cpp
golos.memo/: CMakeLists.txt  README.md  golos.memo.abi  golos.memo.cpp  golos.memo.hpp
golos.posts/: CMakeLists.txt  golos.posts.abi  golos.posts.cpp  golos.posts.hpp  objects.hpp
golos.publication/: CMakeLists.txt  README.md  charges.hpp  config.hpp  golos.publication.abi  golos.publication.cpp  golos.publication.cpp.autosave  golos.publication.hpp  objects.hpp  parameters.hpp  types.h  utils.hpp
golos.referal/: CMakeLists.txt  README.md
golos.referal/include/golos.referal/: golos.referal.hpp
golos.referal/src/: golos.referal.cpp
golos.referral/: CMakeLists.txt  README.md  golos.referral.abi
golos.referral/abi/: golos.referral.abi
golos.referral/include/golos.referral/: config.hpp  golos.referral.hpp  parameters.hpp
golos.referral/src/: golos.referral.cpp
golos.social/: CMakeLists.txt  README.md  golos.social.abi  golos.social.cpp  golos.social.hpp  objects.hpp  types.h
golos.vesting/: CMakeLists.txt  README.md  config.hpp  golos.vesting.abi  golos.vesting.cpp  golos.vesting.hpp  objects.hpp  parameters.hpp
math-expr/math_expr_test/: CMakeLists.txt  atmsp.h  expr_code_info.h  fixed_point.h  fixed_point_math.h  math_expr_test.abi  math_expr_test.cpp  types.h
math-expr/unittests/: math_expr_tests.cpp
reward_calcs/: CMakeLists.txt  config.h  reward_calcs.abi  reward_calcs.cpp  types.h
scripts/: .accounts.py.swo  .authority_keys.py.swp  .convert.py.swp  README.md  accounts.py  accounts_and_keys.py  accounts_logging.py  authority_keys.py  balances.py  blockgraph.py  boot-sequence.py  config.py  convert.py  convert_publish.py  create-genesis.sh  dbs.py  events.py  testnet.py  tests.py  update_childcount.py  utils.py  witnesses.py
scripts/golos-boot-sequence/: README.md  accounts.json  golos-boot-sequence.py
scripts/posting_script/: convert.py  dbs.py  posts.py  votes.py
tests/: CMakeLists.txt  contracts.hpp.in  cyber.token_test_api.hpp  eosio.token_test_api.hpp  golos.charge_test_api.hpp  golos.charge_tests.cpp  golos.ctrl_test_api.hpp  golos.ctrl_tests.cpp  golos.emit_test_api.hpp  golos.emit_tests.cpp  golos.params_tests.cpp  golos.posting_test_api.hpp  golos.posting_unit_tests.cpp  golos.publication_rewards_tests.cpp  golos.publication_rewards_types.hpp  golos.publication_tests.cpp  golos.referral_test_api.hpp  golos.referral_tests.cpp  golos.social_test_api.hpp  golos.social_tests.cpp  golos.vesting_test_api.hpp  golos.vesting_tests.cpp  golos_tester.cpp  golos_tester.hpp  main.cpp  reward_calcs_tests.cpp  test_api_helper.hpp  test_permlinks.csv
unittests/: golos.ctrl_tests.cpp  golos.vesting_tests.cpp
